J3_TP5/allow-egress-pma.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-pma
  namespace: database
spec:
  podSelector:
    matchLabels:
      app: php
  policyTypes:
    - Egress
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: mysql
      ports:
        - protocol: TCP
          port: 3306
