J3_TP5/deny-all-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-policy
  namespace: database
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
